# ipam-poc

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.netbox.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: allocation.py  device_roles.py  devices.py  prefixes.py  sites.py  tags.py  tenants.py  vlan_groups.py  vlans.py
backend/app/domain/allocation/: __init__.py  naming.py  rules.py
backend/app/domain/services/: prefix_service.py
backend/app/infrastructure/netbox/: __init__.py  client.py
backend/app/schemas/: __init__.py  allocation.py  device.py  device_role.py  prefix.py  site.py  tag.py  tenant.py  vlan.py  vlan_group.py
backend/app/utils/: __init__.py  slug.py
backend/tests/: __init__.py  conftest.py  test_schemas.py
backend/tests/api/: test_prefixes.py
docs/: HLD.md  PRD.md
docs/diagrams/: c4-component.puml  c4-container.puml  c4-context.puml  c4-deployment.puml  render-diagrams.sh  sequence-allocation.puml  sequence-device-sync.puml
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/allocation/: page.tsx
frontend/app/devices/: page.tsx
frontend/app/interfaces/: page.tsx
frontend/app/prefixes/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sites/: page.tsx
frontend/types/: prefix.ts
(+5 files in other folders)
